SemirDashboard/tests/output/run_log_raw.txt
Creating test database for alias 'default'...
......EEE[INFO] 2026-03-31 06:38:21,227 App.services.customer_import req=- step=customer_import Ś === START OPTIMIZED Customer Import: customer.xlsx ===
EEEEE.EEEEE[INFO] 2026-03-31 06:41:52,590 App.services.customer_import req=- step=customer_import Ś === START OPTIMIZED Customer Import: customer.xlsx ===
..EEFEEE.E[INFO] 2026-03-31 06:44:55,426 App.services.customer_import req=- step=customer_import Ś === START OPTIMIZED Customer Import: customer.xlsx ===
EE
======================================================================
ERROR: test_import_customers (tests.test_sales.SalesImportTest.test_import_customers)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_sales.py", line 44, in test_import_customers
    t = self.timer("import_customers")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_import_sales (tests.test_sales.SalesImportTest.test_import_sales)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_sales.py", line 52, in test_import_sales
    t = self.timer("import_sales")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_sales.SalesImportTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_page_timing_alltime (tests.test_coupon.CouponAnalyticsTest.test_page_timing_alltime)
Simulate coupon dashboard page load, instrument each phase.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 67, in test_page_timing_alltime
    log.section("COUPON PAGE TIMING (all-time) Ś per-function breakdown")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_page_timing_via_analytics_fn (tests.test_coupon.CouponAnalyticsTest.test_page_timing_via_analytics_fn)
Time the official calculate_coupon_analytics function end-to-end.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 139, in test_page_timing_via_analytics_fn
    log.section("COUPON PAGE TIMING Ś via calculate_coupon_analytics()")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_prefix_filter (tests.test_coupon.CouponAnalyticsTest.test_prefix_filter)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 205, in test_prefix_filter
    t = self.timer(f"coupon_prefix_{prefix}")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_snapshot_2025 (tests.test_coupon.CouponAnalyticsTest.test_snapshot_2025)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 176, in test_snapshot_2025
    t = self.timer("coupon_snapshot_2025")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_snapshot_alltime (tests.test_coupon.CouponAnalyticsTest.test_snapshot_alltime)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 160, in test_snapshot_alltime
    t = self.timer("coupon_snapshot_alltime")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_coupon.CouponAnalyticsTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_import_coupons (tests.test_coupon.CouponImportTest.test_import_coupons)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_coupon.py", line 40, in test_import_coupons
    t = self.timer("import_coupons")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_coupon.CouponImportTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_import_cnv_customers (tests.test_customer.CNVCustomerImportTest.test_import_cnv_customers)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 170, in test_import_cnv_customers
    t = self.timer("import_cnv_customers")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_customer.CNVCustomerImportTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_page_timing_2025 (tests.test_customer.CustomerAnalyticsTest.test_page_timing_2025)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 282, in test_page_timing_2025
    log.section("CUSTOMER PAGE TIMING (2025 filter)")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_page_timing_alltime (tests.test_customer.CustomerAnalyticsTest.test_page_timing_alltime)
Simulate full customer page load Ś instrument each DB query phase.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 204, in test_page_timing_alltime
    log.section("CUSTOMER PAGE TIMING (all-time) Ś per-query breakdown")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_snapshot_2025 (tests.test_customer.CustomerAnalyticsTest.test_snapshot_2025)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 315, in test_snapshot_2025
    t = self.timer("customer_snapshot_2025")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_snapshot_alltime (tests.test_customer.CustomerAnalyticsTest.test_snapshot_alltime)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 293, in test_snapshot_alltime
    t = self.timer("customer_snapshot_alltime")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_snapshot_breakdown (tests.test_customer.CustomerAnalyticsTest.test_snapshot_breakdown)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 332, in test_snapshot_breakdown
    t = self.timer("customer_snapshot_breakdown")
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 165, in timer
    get_run_log().section(name)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_customer.CustomerAnalyticsTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: test_per_query_timing (tests.test_customer.CustomerTimingBreakdownTest.test_per_query_timing)
Run each DB query independently to pinpoint the slow ones.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 387, in test_per_query_timing
    log.section("CUSTOMER PAGE Ś isolated per-query timing")
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 63, in section
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
ERROR: tearDownClass (tests.test_customer.CustomerTimingBreakdownTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 221, in tearDownClass
    log.finalize(SnapshotTestCase._summary_results)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 78, in finalize
    self._write("")
    ~~~~~~~~~~~^^^^
  File "D:\New-jouney\semir\SemirDashboard\tests\base.py", line 56, in _write
    self._f.write(entry + "\n")
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
ValueError: I/O operation on closed file.

======================================================================
FAIL: test_pos_cnv_math (tests.test_customer.CustomerAnalyticsTest.test_pos_cnv_math)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "D:\New-jouney\semir\SemirDashboard\tests\test_customer.py", line 356, in test_pos_cnv_math
    self.assertEqual(total_cnv, cnv_only + shared,
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        f"total_cnv ({total_cnv}) != cnv_only ({cnv_only}) + shared ({shared})")
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AssertionError: 79606 != 79602 : total_cnv (79606) != cnv_only (5130) + shared (74472)

----------------------------------------------------------------------
Ran 26 tests in 703.489s

FAILED (failures=1, errors=21)
Destroying test database for alias 'default'...
Found 26 test(s).
System check identified no issues (0 silenced).

[LOG] Writing to: D:\New-jouney\semir\SemirDashboard\tests\output\20260331_063736_ut_run.log
  [sales_page_2025] 7.84s  calculate_return_rate_analytics(2025) ? active=33050

------------------------------------------------------------
  [TIMER] sales_page_2025
------------------------------------------------------------
     7.84s  ##############################  calculate_return_rate_analytics(2025) ? active=33050
  TOTAL: 7.84s
------------------------------------------------------------

  [sales_page_alltime] 4.67s  DB fetch SalesTransaction (select_related) ? 118069 rows
  [sales_page_alltime] 0.02s  DB aggregate VIP0 all-time counts
  [sales_page_alltime] 0.03s  DB count total_customers + member_active_all_time
  [sales_page_alltime] 2.41s  build_customer_purchase_map ? 44017 customers
  [sales_page_alltime] 0.64s  per-customer loop (return_visits + customer_info) ? 44016 details
  [sales_page_alltime] 0.14s  aggregate_by_grade ? 5 grades
  [sales_page_alltime] 0.27s  aggregate_by_season ? 10 sessions
  [sales_page_alltime] 0.29s  aggregate_by_month ? 27 months
  [sales_page_alltime] 0.32s  aggregate_by_year ? 3 years
  [sales_page_alltime] 0.28s  aggregate_by_week ? 117 weeks
  [sales_page_alltime] 1.53s  aggregate_by_shop ? 22 shops

------------------------------------------------------------
  [TIMER] sales_page_alltime
------------------------------------------------------------
     4.67s  #######################  DB fetch SalesTransaction (select_related) ? 118069 rows
     0.02s    DB aggregate VIP0 all-time counts
     0.03s    DB count total_customers + member_active_all_time
     2.41s  ############  build_customer_purchase_map ? 44017 customers
     0.64s  ###  per-customer loop (return_visits + customer_info) ? 44016 details
     0.14s    aggregate_by_grade ? 5 grades
     0.27s  #  aggregate_by_season ? 10 sessions
     0.29s  #  aggregate_by_month ? 27 months
     0.32s  #  aggregate_by_year ? 3 years
     0.28s  #  aggregate_by_week ? 117 weeks
     1.53s  #######  aggregate_by_shop ? 22 shops
  TOTAL: 10.59s
------------------------------------------------------------

  [sales_snapshot_2025] 5.75s  calculate_return_rate_analytics(2025)

------------------------------------------------------------
  [TIMER] sales_snapshot_2025
------------------------------------------------------------
     5.75s  ############################  calculate_return_rate_analytics(2025)
  TOTAL: 5.75s
------------------------------------------------------------

  [sales_snapshot_alltime] 9.59s  calculate_return_rate_analytics(all-time)

------------------------------------------------------------
  [TIMER] sales_snapshot_alltime
------------------------------------------------------------
     9.59s  ##############################  calculate_return_rate_analytics(all-time)
  TOTAL: 9.59s
------------------------------------------------------------

[LOG] Run log saved: D:\New-jouney\semir\SemirDashboard\tests\output\20260331_063736_ut_run.log
